--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -819,7 +819,7 @@ a.scroll-down.scroll-yt {
 	position: absolute;
 	top: 50%;
 	margin-top:35px;
-	color: #FF0000;
+	color: #100f0f;
 	width: 100%;
 	font-family: 'Satisfy', cursive;
 	text-align:center;
